<resources>
    <string name="app_name">saving</string>
    <string name="welcome">Welcome !</string>
    <string name="intro">welcome to Fleet Finance, the easy way to improve your finances and help you control expenses and income</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="portofolio">Portofolio</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_koma">welcome,</string>
    <string name="pay">Pay</string>
    <string name="save_money">Save Money</string>
    <string name="transaction_history">Transaction History</string>
    <string name="icon_income_and_expenditure">icon income and expenditure</string>
    <string name="my_saving">My Saving</string>
</resources>