<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <RelativeLayout
        android:layout_width="349dp"
        android:layout_height="273dp"
        android:background="@drawable/square_onboarding"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            style="@style/TextContent.welcome"
            android:text="@string/welcome" />

        <TextView
            style="@style/TextContent.introduce"
            android:layout_centerInParent="true"
            android:text="@string/intro" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/get_started" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="312dp"
        android:contentDescription="Money Icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/ic_money" />
</androidx.constraintlayout.widget.ConstraintLayout>