<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/dummy_welcome"
            style="@style/TextContent.homewelcome"
            android:text="@string/welcome_koma" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextContent.name"
            android:layout_below="@id/dummy_welcome"
            android:text="Dummy User" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/font_grey"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/dummy_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_bg_money"
            android:orientation="vertical">

            <TextView
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/my_saving"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/tv_balance"
                style="@style/TextContent.balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="Rp. 10.430.000"
                android:layout_marginTop="8dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:progress="25"
                android:progressBackgroundTint="@color/white"
                android:progressTint="#102693"/>

            <TextView
                android:id="@+id/balance_progress"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="Rp. 10.430.000 / Rp. 40.000.000"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/dummy_frame_layout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/btn_save"
                style="@style/ButtonBlack">

                <TextView
                    style="@style/TextContent.ButtonBlack"
                    android:text="@string/save_money"
                    app:drawableStartCompat="@drawable/ic_save" />
            </FrameLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <FrameLayout
                android:id="@+id/btn_pay"
                style="@style/ButtonBlack">

                <TextView
                    style="@style/TextContent.ButtonBlack"
                    android:text="@string/pay"
                    app:drawableStartCompat="@drawable/ic_pay" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        app:umanoOverlay="false"
        app:umanoDragView="@id/dummy_dragview"
        app:umanoScrollableView="@id/rv_transaction"
        app:umanoInitialState="expanded"
        app:umanoPanelHeight="68dp"
        app:umanoFadeColor="@android:color/transparent"
        app:umanoShadowHeight="0dp"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"/>

        <LinearLayout
            android:id="@+id/dummy_dragview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_history"
            android:orientation="vertical">

            <View
                android:layout_marginTop="20dp"
                android:layout_width="64dp"
                android:layout_height="6dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_strip_slide"/>

            <TextView
                style="@style/TextContent.name.transactionhistory"
                android:layout_marginTop="10dp"
                android:text="@string/transaction_history"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/history_transaction"/>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
</LinearLayout>